[gd_scene load_steps=2 format=3 uid="uid://bo3k4x4ntq5u1"]

[ext_resource type="Script" uid="uid://iiswlmhtrju6" path="res://powerupmenu.gd" id="1_hj2i6"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_hj2i6")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 300.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_top = 80.0
offset_right = 400.0
offset_bottom = 216.0

[node name="SpeedButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Speed Boost (+50%)"

[node name="JumpButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Jump Power (+30%)"

[node name="GravityButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Reduce Gravity"

[node name="BlocksButton" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "5 Extra Blocks"
